# FPDB

./: CMakeLists.txt  README.md  README_NEW.md  client.cpp  remote_spawn.cpp  server.cpp
fpdb-aws/: CMakeLists.txt
fpdb-aws/include/fpdb/aws/: AWSClient.h  AWSConfig.h  ProfileAWSCredentialsProviderChain.h
fpdb-aws/src/: AWSClient.cpp  AWSConfig.cpp  ProfileAWSCredentialsProviderChain.cpp
fpdb-catalogue/: CMakeLists.txt
fpdb-catalogue/include/fpdb/catalogue/: CatalogueEntryType.h  Table.h
fpdb-catalogue/include/fpdb/catalogue/format/: CSVFormat.h  Format.h  FormatType.h  ParquetFormat.h
fpdb-catalogue/include/fpdb/catalogue/local-fs/: LocalFSCatalogueEntry.h  LocalFSCatalogueEntryReader.h  LocalFSPartition.h  LocalFSTable.h
fpdb-catalogue/include/fpdb/catalogue/s3/: S3CatalogueEntry.h  S3CatalogueEntryReader.h  S3Partition.h  S3Table.h
fpdb-catalogue/include/fpdb/catalogue/serialization/: FormatSerializer.h  PartitionSerializer.h  TableSerializer.h
fpdb-catalogue/src/: Table.cpp
fpdb-catalogue/src/format/: CSVFormat.cpp  Format.cpp  ParquetFormat.cpp
fpdb-catalogue/src/local-fs/: LocalFSCatalogueEntry.cpp  LocalFSCatalogueEntryReader.cpp  LocalFSPartition.cpp  LocalFSTable.cpp
fpdb-catalogue/src/s3/: S3CatalogueEntry.cpp  S3CatalogueEntryReader.cpp  S3Partition.cpp  S3Table.cpp
fpdb-executor/: CMakeLists.txt
fpdb-executor/ATTIC/bench/: Globals.h  GroupBenchmark.cpp  HashJoinBenchmark.cpp  ShuffleBenchmark.cpp
fpdb-executor/ATTIC/test/: ConnectionTest.cpp
fpdb-executor/include/fpdb/executor/: Execution.h  Executor.h  ModeCtrl.h
fpdb-executor/include/fpdb/executor/cache/: SegmentCacheActor.h
fpdb-executor/include/fpdb/executor/message/: ConnectMessage.h  DebugMessage.h  MessageType.h  ScanMessage.h  TupleMessage.h
fpdb-executor/include/fpdb/executor/physical/: Globals.h  LocalPOpDirectoryEntry.h  POpActor.h  POpConnection.h  POpContext.h  POpType.h  PhysicalOp.h  PhysicalPlan.h
fpdb-executor/include/fpdb/executor/serialization/: AggregateFunctionSerializer.h  HashJoinProbeAbstractKernelSerializer.h  MessageSerializer.h  POpSerializer.h
fpdb-executor/src/: Execution.cpp  Executor.cpp  ModeCtrl.cpp
fpdb-executor/src/cache/: SegmentCacheActor.cpp
fpdb-executor/src/message/: DebugMessage.cpp  ScanMessage.cpp  TupleMessage.cpp
fpdb-executor/src/physical/: LocalPOpDirectoryEntry.cpp  POpActor.cpp  POpConnection.cpp  POpContext.cpp  PhysicalOp.cpp  PhysicalPlan.cpp
fpdb-executor/src/physical/aggregate/: AggregatePOp.cpp
fpdb-executor/src/physical/aggregate/function/: AggregateFunction.cpp  Avg.cpp  AvgBase.cpp  AvgReduce.cpp  Count.cpp  (+2 more)
fpdb-executor/src/physical/bloomjoin/: BloomCreateKernel.cpp  BloomCreateOperator.cpp  BloomFilterMessage.cpp  FileScanBloomUseKernel.cpp  FileScanBloomUseOperator.cpp  SlicedBloomFilter.cpp  UniversalHashFunction.cpp  UniversalSQLHashFunction.cpp
fpdb-executor/src/physical/cache/: CacheLoadPOp.cpp
fpdb-executor/src/physical/collate/: CollatePOp.cpp
fpdb-executor/src/physical/file/: FileScanKernel.cpp  FileScanPOp.cpp  FileScanPOp2.cpp
fpdb-executor/src/physical/filter/: FilterPOp.cpp
fpdb-executor/src/physical/group/: GroupKernel.cpp  GroupPOp.cpp
fpdb-executor/src/physical/limitsort/: LimitSortPOp.cpp
fpdb-executor/src/physical/merge/: MergeKernel.cpp  MergePOp.cpp
fpdb-executor/src/physical/project/: ProjectPOp.cpp
fpdb-executor/src/physical/s3/: S3GetPOp.cpp  S3SelectPOp.cpp  S3SelectScanAbstractPOp.cpp  S3SelectScanKernel.cpp  S3SelectScanPOp2.cpp
fpdb-executor/src/physical/shuffle/: RecordBatchShuffler.cpp  ShuffleKernel.cpp  ShufflePOp.cpp
fpdb-executor/src/physical/sort/: SortPOp.cpp
fpdb-executor/src/physical/split/: SplitPOp.cpp
fpdb-executor/src/physical/test/: ReceivePOp.cpp  SendPOp.cpp
fpdb-executor/src/physical/transform/: PrePToLocalFSPTransformer.cpp  PrePToPTransformer.cpp  PrePToS3PTransformer.cpp
fpdb-main/: CMakeLists.txt
fpdb-main/include/fpdb/main/: ActorSystemConfig.h  CAFInit.h  ExecConfig.h  Server.h
fpdb-main/src/: CAFInit.cpp  Client.cpp  ExecConfig.cpp  Server.cpp
fpdb-main/test/: Globals.h  MainTest.cpp  SSBTest.cpp  TPCHDistTest.cpp  TPCHTest.cpp  TestUtil.cpp  TestUtil.h
fpdb-plan/: CMakeLists.txt
fpdb-plan/include/fpdb/plan/: Mode.h
fpdb-plan/src/calcite/: CalcitePlanJsonDeserializer.cpp
fpdb-plan/src/prephysical/: AggregatePrePOp.cpp  FilterPrePOp.cpp  FilterableScanPrePOp.cpp  GroupPrePOp.cpp  HashJoinPrePOp.cpp  LimitSortPrePOp.cpp  NestedLoopJoinPrePOp.cpp  PrePhysicalOp.cpp  PrePhysicalPlan.cpp  ProjectPrePOp.cpp  SortPrePOp.cpp
fpdb-store-client/: CMakeLists.txt
fpdb-store-client/test/: Module.hpp
fpdb-store-server/: CMakeLists.txt
fpdb-store-server/executable/: Global.hpp  Main.cpp
fpdb-store-server/src/: CSVInput.cpp  CmdObject.cpp  CmdType.cpp  FileHeaderInfo.cpp  FlightHandler.cpp  FlightInputSerialization.cpp  FlightSelectObjectContentRequest.cpp  HeaderMiddleware.cpp  HeaderMiddlewareFactory.cpp  InputSerializationType.cpp  Module.cpp  ParquetInput.cpp  TicketObject.cpp  TicketType.cpp
fpdb-store-server/test/: FlightTest.cpp  Main.cpp  Module.cpp  Module.hpp
fpdb-tuple/: CMakeLists.txt
fpdb-tuple/bench/: ArrayAppenderBench.cpp
fpdb-tuple/include/fpdb/tuple/: ArrayAppenderWrapper.h  ArrayHasher.h  Converter.h  FileReader.h  FileReaderBuilder.h  FileType.h  Globals.h  Sample.h  Scalar.h  TupleSet.h  Util.h
fpdb-tuple/src/: ArrayAppenderWrapper.cpp  ArrayHasher.cpp  Converter.cpp  FileReader.cpp  FileReaderBuilder.cpp  Sample.cpp  TupleSet.cpp  TupleSetIndex.cpp  Util.cpp
fpdb-tuple/src/arrow/: ArrowAWSGZIPInputStream.cpp  ArrowAWSGZIPInputStream2.cpp  ArrowAWSInputStream.cpp  CSVToArrowSIMDChunkParser.cpp  CSVToArrowSIMDStreamParser.cpp
fpdb-tuple/src/csv/: CSVParser.cpp  CSVReader.cpp
fpdb-tuple/src/parquet/: ParquetReader.cpp
fpdb-tuple/src/serialization/: ArrowSerializer.cpp
fpdb-tuple/test/: ArrayAppenderTest.cpp  CSVTest.cpp  Globals.h  ParquetTest.cpp  TupleSetIndexTest.cpp  TupleTest.cpp
fpdb-util/: CMakeLists.txt
fpdb-util/include/fpdb/util/: Util.h
fpdb-util/src/: Util.cpp
(+286 files in other folders)
